--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -5,8 +5,8 @@
 
 $mainColor: #808080;
 
-$borderBottom: 1px solid #BAB8B0;
-$borderDashed: 1px dashed #BAB8B0;
+$borderBottom: 1px solid #000;
+$borderDashed: 1px dashed #000;
 $borderBottomShadow: #FFF 0px 1px 0;
 
 $borderRight: 1px solid #BAB8B0;
