--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -22,7 +22,7 @@ header {
 	  height: 35px;
 	
 		.loupe{
-		padding-left:185px;
+		padding-left:190px;
 		padding-top: 3px;  
 		}
 	}
@@ -36,9 +36,10 @@ header {
 	  margin-left: 65px;
 	  width: 152px;
 	  height: 27px;
-	  font-family: 'bebasneue-webfont';
-	  font-size:22px;
+	  font-family: 'gotham';
+	  font-size:14px;
 	  color: black;
+	  background-color:white;
 	}
 	
 	#ligne1{
@@ -56,7 +57,7 @@ header {
 		}
 		
 		#chiffre { 
-		margin-top: -21px;
+		margin-top: -23px;
 		margin-left: 45px;
 		font-family: 'bebasneue-webfont';
 		font-size:25px;
@@ -81,7 +82,7 @@ header {
 		}
 		
 		#chiffre { 
-		margin-top: -20px;
+		margin-top: -23px;
 		margin-left: 45px;
 		font-family: 'bebasneue-webfont';
 		font-size:25px;
@@ -109,7 +110,7 @@ header {
 		}
 		
 		#chiffre { 
-		margin-top: -23px;
+		margin-top: -24px;
 		margin-left: 45px;
 		font-family: 'bebasneue-webfont';
 		font-size:25px;
@@ -134,7 +135,7 @@ header {
 		}
 		
 		#chiffre { 
-		margin-top: -23px;
+		margin-top: -24px;
 		margin-left: 45px;
 		font-family: 'bebasneue-webfont';
 		font-size:25px;
@@ -149,12 +150,12 @@ header {
 
     
     #adroite{
-	margin-top:50px;
+	margin-top:37px;
 	
 	#user-nav {    
 	  margin-left:120px;
 	  background-color: #000000;
-      height:28px;
+      height:26px;
 	  width: 158px;
 	  font-family: 'gotham';
 	  color: white;
