--- a/app/views/public_activity/argument/_vote.html.erb
+++ b/app/views/public_activity/argument/_vote.html.erb
@@ -11,7 +11,7 @@
 			<%= render "shared/argument_neutre_badge", :argument => activity.trackable, :argumentable => activity.trackable.argumentable %>
 		<% end %>
 		</div>
-		<div class="row"><%= render "shared/argumentable_badge", debate: activity.trackable.argumentable %></div>
+		<div class="row"><%= render "shared/debate_badge", debate: activity.trackable.argumentable %></div>
 		
 	<% end %>
 </section>
