--- a/app/views/shared/_argcom_form.html.erb
+++ b/app/views/shared/_argcom_form.html.erb
@@ -19,8 +19,7 @@
 
 			    <%= f.text_field :content, placeholder: "réagis à l'argument", class: "text-reaction" %>
 				<%= f.hidden_field :argument_id, :value => argument.id %>
-			  	<%= f.submit "Post", class: "reaction" %>
+			  	<%= f.submit "OK", class: "reaction" %>
 			<% end %>
-			</br>
 		</div>
 </section>
