--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
   
   <div class="container">
 	<div class="row">
-		<div class="span5 offset4" id="intro">
+		<div class="row" id="intro">
 		Argumente. Conteste. Vote. Défie. Juge. Débats.
 		</div>
 	</div>
@@ -71,11 +71,11 @@
 	<div class="row">
 		
 	   <div id="best-debates1">
-	   	DEBATS LES PLUS SUIVIS
+	   	Débats les plus suivis
 	   </div>
 	 
 	   <div id="best-debates2">
-	   	DEBATS EXPERTS A VENIR
+	   	Débats experts à venir
 	   </div>
 	</div>
 	
