--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -4,18 +4,11 @@
 
 		<%= render "profile_header" %>	
 		
-		<div class= 'row'>
-			<div class="span3">
+		<div class= 'row' id="container-activ">
+			<div>
 				<%= render "profile_badge" %>	
 			</div>
-			<div class="span8" id="for-badges">
-				<% if current_user && current_user == @user %>
-					<div class="espace1"></div>
-				<% elsif current_user && current_user.in_team?(@user)%>
-					<div class="espace"></div>
-				<% else%>
-					<div class="espace2"></div>
-				<%end%>
+			<div class="span7" id="container-activ2">
 				
 				<% @user.invitation_request.each do |invitation|%>
 
@@ -83,8 +76,9 @@
 
 				<% @user.team_request.each do |relationship|%>
 				<section id="notifications">
-					<div class="intro-notifications">
-					 	<%= relationship.sender.name %> te propose de former une équipe</div>
+					<div class="span4" id="intro-notifications">
+					 <div class="texte"><%= link_to relationship.sender.fitting_name, relationship.sender%> vous propose de faire une équipe</div></div>
+				<div class="row"><%= render "shared/user_badge", user: relationship.sender%></div>
 				</section>
 				<%end%>	
 					
