--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -4,10 +4,13 @@ font-size: 16px;
 font-style: italic;
 font-weight: bold;
 margin-top:23px;
+width:1060px;
+margin-left: 20px;
+text-align: center;
 }
 
 #holy{
-	margin-left: 120px;
+	margin-left: 115px;
 	margin-top: 15px;
 }
 
@@ -126,10 +129,12 @@ margin-top:23px;
     }  
 }
 
-  
+#explanation1{
+
+}  
   .explanation1 {
 	margin-top: 30px;
-	margin-left:60px;
+	margin-left:70px;
 	margin-bottom: 30px;
     text-align: center;
 	height: 175px;
@@ -235,7 +240,7 @@ margin-top:23px;
 	font-family:"gotham";
 	font-size:18px;
 	height: 29px;
-	width: 315px;
+	width: 333px;
 	background-color: #CCC;
 	font-color: #000000;
 	font-weight: bold;
@@ -244,12 +249,12 @@ margin-top:23px;
 	
 	#best-debates2{
 	margin-top:-29px;
-	margin-left: 560px;
+	margin-left: 562px;
     text-align: center;
 	font-family:"gotham";
 	font-size:18px;
 	height: 29px;
-	width: 315px;
+	width: 333px;
 	background-color: #CCC;
 	font-color: #000000;
 	font-weight: bold;
@@ -274,23 +279,6 @@ margin-top:23px;
 	margin-left:10px;
 	margin-bottom:10px;
 	}	
-	
-	.espace{
-		height: 41px;
-		width: 20px;
-		background-color: white;
-	}
-	.espace1{
-		height: 74px;
-		width: 20px;
-		background-color: white;
-	}
-	
-	.espace2{
-			margin-top:-25px;
-			height: 0px;
-			width: 20px;
-			background-color: white;
-	}			
+				
 }
 
