--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -87,12 +87,14 @@
 	font-style: italic;
 	font-weight: bold;
 	font-size: 20px;
-	margin-left:240px;
+	margin-left:200px;
 
 	
 	li {
       display: inline-block;
 	  padding-right: 20px;
+			cursor : pointer;
+
     }
 	
 	.tiret{
@@ -107,7 +109,6 @@
 
 #profile-badge{
 	background-color: #D3D3D3;
-	margin-left:211px;
 	width: 170px;
 	min-height: 400px;
 	margin-bottom: 30px;
@@ -178,6 +179,13 @@
 		padding: 5px 10px 5px 10px;
 		background-color: black;
 		}
+		
+		.boutons-sociaux3{
+		color: $mainColor;
+		padding: 5px 10px 5px 10px;
+		background-color: black;
+		font-size: 15px;
+		}
 		}
 	}
 	
@@ -210,3 +218,50 @@
 	}
 		
 }
+
+
+#container-activ{
+	margin-left: 175px;
+	width: 840px;
+
+	.div{
+	diplay: inline-block;
+	}
+	
+	#container-activ2{
+	margin-top: 15px;
+	}				
+}
+
+
+#user-badge{
+	margin-left: 75px;
+	width: 170px;
+	background-color: #D3D3D3;
+	margin-bottom: 30px;
+
+	
+	.image1{
+
+	margin-left:10px;
+	width: 150px;
+	padding-top:10px;
+	padding-bottom: 10px;
+	margin-right: 10px;
+	border-bottom: 1px Solid white;
+		img { width: 150px; height:150px;}
+	}
+	
+	.nom{
+		font-family:"gotham";
+		font-size: 16px;
+		font-color: black;
+		margin-left: 10px;
+		width: 150px;
+		text-align: center;
+		margin: 10px;
+	}
+
+	
+}
+
