--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,7 +104,7 @@
 					  <%= text_field_tag ("search") , nil, :id=>"search-text",
 					    :onblur=>"if(this.value=='')this.setAttribute('class', 'search_input');",
 					    :onfocus=>"this.setAttribute('class', 'search_input_clear');",
-						placeholder: "CHERCHER UN DEBAT"
+						placeholder: "CHERCHER UN TAG"
 					 %>
 					<% end %>
 				</div>
