--- a/app/views/public_activity/user/_following.html.erb
+++ b/app/views/public_activity/user/_following.html.erb
@@ -1,6 +1,7 @@
-follow doulin
-<% if activity.trackable %>
-  <%= link_to activity.trackable.name, activity.trackable %>
-<% else %>
-  which has since been removed
-<% end %>
+<section id="activities">
+	<% if activity.trackable %>
+	  	<div class="span4" id="intro-activities">
+		<div class="texte"><%= link_to activity.owner.fitting_name, activity.owner %> a rejoint le troupeau de </div></div>
+		<div class="row"><%= render "shared/user_badge", user: activity.trackable %></div>
+	<% end %>
+</section>
