--- a/app/views/shared/_argument_badge.html.erb
+++ b/app/views/shared/_argument_badge.html.erb
@@ -1,7 +1,7 @@
 <section id="argument-pour">
 		<div class="row" id='initial'>
 		     <div class id="bleu">
-		        <div class="row">
+		        <div class="row" id="descente">
 	                 <div class="span2">
 	                 	<div class="user">
 							<%= image_tag argument.user.avatar.url(:medium), class: "image" %>
@@ -10,7 +10,7 @@
 	                 	<%= link_to argument.user.fitting_name, argument.user %>
 	                 	</div>
 	                 </div>
-	                 <div class="span4">
+	                 <div class="span4" id="descente2">
 						<div class="row" id='title5'>
 	                 		<div class="title">
 	                 			<h2><%= argument.title%></h2>
@@ -36,14 +36,18 @@
 						<div class="row" id="coco">
 	                 		<div class="toggle">
 							  <div id="argcontent">
-	                 			<%= simple_format argument.content%>
-							  </div>
-							<p class="toggleClose"><a>Refermer l'argument</a></p>
-							
+								<%= h(argument.content).gsub(/\n/, '<br/>').html_safe %>
+							  </div>							
 	                 		</div>
 						</div>
+						
 	                 </div>
 		     	</div>
+		
+				<div class="toggleClose2">
+					<div class="toggleClose"><a>Refermer l'argument</a></div>
+					<div class="arrow-up-argument"></div>
+				</div>
 	         </div>
 
 	    </div>
