--- a/app/views/users/active.html.erb
+++ b/app/views/users/active.html.erb
@@ -4,18 +4,11 @@
 
 		<%= render "profile_header" %>	
 
-		<div class= 'row'>
-			<div class="span2">
+		<div class= 'row' id="container-activ">
+			<div>
 				<%= render "profile_badge" %>	
 			</div>
-			<div class="span8" id="for-badges">
-				  <% if current_user && current_user == @user %>
-				  	<div class="espace1"></div>
-				  <% elsif current_user && current_user.in_team?(@user)%>
-				  	<div class="espace"></div>
-				  <% else%>
-				 	<div class="espace2"></div>
-				  <%end%>
+			<div class="span7" id="container-activ2">
 				
 				<% @user.challenges.open_challenges.each do |challenge| %>
 					<%= render "shared/challenge_badge", challenge: challenge  %>
