--- a/app/views/users/activities.html.erb
+++ b/app/views/users/activities.html.erb
@@ -4,22 +4,15 @@
 
 		<%= render "profile_header" %>	
 		
-		<div class= 'row'>
-			<div class="span2">
+		<div class= 'row' id="container-activ">
+			<div>
 				<%= render "profile_badge" %>	
 			</div>
-			<div class="span8" id="for-badges">
-				  <% if current_user && current_user == @user %>
-				  	<div class="espace1"></div>
-				  <% elsif current_user && current_user.in_team?(@user)%>
-				  	<div class="espace"></div>
-				  <% else%>
-				 	<div class="espace2"></div>
-				  <%end%>
-				
+			<div class="span7" id="container-activ2">				
 				<% @activities.each do |activity| %>
 					<%= render_activity activity %>
 				<%end%>
+			
 			</div>
 		</div>
 
