--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -179,6 +179,13 @@
 	font-size:22px;
 	text-align: center;
 	
+		.texte{
+			padding-top:5px;
+			font-family: "gotham";
+			font-size:22px;
+			color: #000;
+			text-align: center;
+		}
 	.texte-newarg{
 	padding-top:5px;
 	font-family: "gotham";
