--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -560,10 +560,10 @@
 	background-color: white;
 	margin-left: -20px;
 	#argcontent{
-	padding: 15px;
+	padding: 15px 15px 15px 15px;
 	margin-top:20px;
 	text-align: left;
-	padding-bottom:20px;
+	padding-bottom:10px;
 	font-family:"georgia";
 	}
 	
@@ -706,7 +706,7 @@
 	padding: 15px;
 	margin-top:20px;
 	text-align: left;
-	padding-bottom:20px;
+	padding-bottom:10px;
 	font-family:"georgia";
 	}
 	
@@ -850,7 +850,7 @@
 	padding: 15px;
 	margin-top:20px;
 	text-align: left;
-	padding-bottom:20px;
+	padding-bottom:10px;
 	font-family:"georgia";
 	}
 	
