--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -22,7 +22,10 @@
 				    <%= f.text_area :content, placeholder: "Réagis!", class: "content" %>
 					<%= f.hidden_field :commentable_id, :value => commentable.id %>
 					<%= f.hidden_field :commentable_type, :value => type %>
-				  <%= f.submit "Valider" %>
+				 
+				 	<div class="action">
+						<%= f.submit "Valider", class: "actions" %>
+					</div>
 				</div>
 				<% end %>
 				</div>
