--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -80,7 +80,8 @@
 	</div>
 	
 	<div class="row" id="en-bas">
-		<%= render "shared/menu_cat"%>
+		
+		<div id="catcatcat"><%= render "shared/menu_cat"%></div>
 	
 		<div id="best-debates3">	
     	    	<%= render "shared/challenge_badge", :challenge => @challenge%>
