--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -234,6 +234,7 @@ text-align: center;
 //    .border-radius;
   }
 	
+
 	#best-debates1{
 	margin-left: 217px;
     text-align: center;
@@ -261,24 +262,123 @@ text-align: center;
 	line-height: 30px;
 	}
 	
-	#best-debates3{
-	margin-left:425px;
-	margin-top:-480px;
-	}
+
 	#en-bas{
 	margin-bottom:50px;
+		
+		#catcatcat{
+		margin-left: 217px;
+		}
+		#best-debates3{
+		margin-left:425px;
+		margin-top:-480px;
+		}
 	}
 	
 	
 
 #for-badges{
-	margin-left: 435px;
-	margin-top: -498px;
+	margin-left: 150px;
 	
-	.liste{
-	margin-left:10px;
-	margin-bottom:10px;
-	}	
-				
+	#list{
+	width: 640px;
+	margin-left:-5px;
+	}
 }
 
+
+#index-doulins{
+	#informations-doulin{
+		width: 950px;
+		margin: 30px 0px 0px 50px;
+		background-color: #C9C9C9;
+		height: 270px;
+		
+		#informations-doulin1{
+			margin-top: 75px;
+			margin-left: 20px;
+			
+			.texte{
+			padding-left:4px;
+			padding-bottom:15px;
+			font-family: "gotham";
+			font-size: 19px;
+			line-height: 22px;
+			border-bottom: 1px Solid black;
+			}
+			
+			.texte2{
+			padding-top: 10px;
+			padding-left:4px;
+			font-family: "georgia";
+			font-size: 14px;
+			font-style: italic;
+			}
+			
+		}
+		
+		#informations-doulin2{
+			margin-left:50px;
+			margin-top: 40px;
+			background-color: #808080;
+			height: 180px;
+			width: 300px;
+			
+		}
+		
+		#informations-doulin3{
+			margin-left:30px;
+			margin-top: 40px;
+			background-color: #808080;
+			height: 180px;
+			width: 300px;
+			
+		}
+		
+		#fermer-explication{
+		font-family: "gotham";
+		font-size: 16px;
+		margin-top: 5px;
+		margin-left: 8px;
+		width:5px;
+		cursor: pointer;
+		}	
+	}
+	
+	#intro-doulin{
+
+	margin-left:0px;
+	margin-top:35px;
+	margin-bottom: 20px;
+	
+	.texte{
+	font-family: "georgia";
+	text-align: center;
+	font-size: 16px;
+	font-weight: bold;
+	font-style: italic;
+	}
+	
+	.ouvrir-informations{
+	margin-top:-20px;
+	margin-left: 825px;
+	cursor: pointer;
+	
+	.circle{
+		background: #808080;
+		width: 30px;
+		height: 30px;
+		border-radius: 50%;
+		
+		.texte2{
+		padding-top: 5px;
+		text-align: center;
+		font-family: "bebasneue-webfont";
+		font-size: 23px;
+		font-style: regular;
+		color: white;
+		}
+	}
+	}
+	}
+}
