--- a/app/views/static_pages/list_challenges.html.erb
+++ b/app/views/static_pages/list_challenges.html.erb
@@ -1,13 +1,69 @@
-<div class="container">
-	<div class="row">
-		<%= link_to "Créér un challenge", new_challenge_path %>
-	</div>	
-				<div class="row">
-					<div class="span2">
+<div class="container" id="index-doulins">
+	<div class="row" id="open-infos">
+		<div class="span11" id="informations-doulin">
+			<div class="span3" id="informations-doulin1">
+				<div class="texte">
+					Les Défis Dialectiques
+					comment ça marche ?				
+				</div>
+				<div class="texte2">
+					1- Je créé un défi</br>
+					2 - J'attends que le défi soit complet </br>
+					3- Une joute oratoire sans pitié !</br>
+				</div>
+			</div>
+			
+			<div class="span4" id="informations-doulin2">
+			</div>
+			<div class="span4" id="informations-doulin3">
+			</div>
+			<div class="span1" id="fermer-explication">
+				X
+			</div>
+		</div>
+	</div>
+	
+	<div class="row" id="open-infos">
+		<div class="span11" id="informations-doulin">
+			<div class="span3" id="informations-doulin1">
+				<div class="texte">
+					<%= link_to "Créér un nouveau défi", new_challenge_path, class: "texte"%>
+				</div>
+				<div class="texte2">
+					1- Je choisis mon type de défi</br>
+					2- Je remplis les caractéristiques</br>
+					3- J'invite des débatteurs </br>
+					4- J'attends mon tour, en surveillant les notifications</br>
+				</div>
+			</div>
+			
+			<div class="span4" id="informations-doulin2">
+			</div>
+			<div class="span4" id="informations-doulin3">
+			</div>
+			<div class="span1" id="fermer-explication">
+				X
+			</div>
+		</div>
+	</div>
+	
+	<div class="row" id="intro-doulin">
+		<div class="texte">Débats Ouverts pour gens d'esprit</div>
+		<div class="ouvrir-informations">
+			<div class="circle">
+					<div class="texte2">
+						?
+					</div>
+			</div>
+		</div>
+	</div>
+	
+				<div class="row" id= "for-badges">
+					<div class="span3">
 						<%= render "shared/menu_cat"%>
 					</div>
 	
-					<div class="span8" id="for-badges">
+					<div class="span8" id="list">
 						<%= render "shared/index", :object => @challenges %>
 					</div>
 				</div>
