--- a/app/views/static_pages/list_debates.html.erb
+++ b/app/views/static_pages/list_debates.html.erb
@@ -1,10 +1,45 @@
-<div class="container">
-				<div class="row">
-					<div class="span2">
+<div class="container" id="index-doulins">
+	<div class="row" id="open-infos">
+		<div class="span11" id="informations-doulin">
+			<div class="span3" id="informations-doulin1">
+				<div class="texte">
+					Débats Ouverts
+					comment ça marche ?				
+				</div>
+				<div class="texte2">
+					1- Je choisis mon débat</br>
+					2- Je vote: Pour, Contre ou Suisse</br>
+					3- J'apporte mon argument !</br>
+				</div>
+			</div>
+			
+			<div class="span4" id="informations-doulin2">
+			</div>
+			<div class="span4" id="informations-doulin3">
+			</div>
+			<div class="span1" id="fermer-explication">
+				X
+			</div>
+		</div>
+	</div>
+	
+	<div class="row" id="intro-doulin">
+		<div class="texte">Débats Ouverts pour gens d'esprit</div>
+		<div class="ouvrir-informations">
+			<div class="circle">
+					<div class="texte2">
+						?
+					</div>
+			</div>
+		</div>
+	</div>
+	
+				<div class="row" id= "for-badges">
+					<div class="span3">
 						<%= render "shared/menu_cat"%>
 					</div>
 	
-					<div class="span8" id="for-badges">
+					<div class="span8" id="list">
 						<%= render "shared/index", :object => @debates %>
 					</div>
 				</div>
