--- a/app/views/static_pages/list_doulins.html.erb
+++ b/app/views/static_pages/list_doulins.html.erb
@@ -1,10 +1,43 @@
-<div class="container">
-				<div class="row">
-					<div class="span2">
+<div class="container" id="index-doulins">
+	<div class="row" id="open-infos">
+		<div class="span11" id="informations-doulin">
+			<div class="span3" id="informations-doulin1">
+				<div class="texte">
+					Débats d'experts
+					comment ça marche ?				
+				</div>
+				<div class="texte2">
+					Deux experts, aux points de vue contradictoires, débattent chaque semaine. Vote pour l'expert le plus convaincant !
+				</div>
+			</div>
+			
+			<div class="span4" id="informations-doulin2">
+			</div>
+			<div class="span4" id="informations-doulin3">
+			</div>
+			<div class="span1" id="fermer-explication">
+				X
+			</div>
+		</div>
+	</div>
+	
+	<div class="row" id="intro-doulin">
+		<div class="texte">Des Duels de haut vol en dialectique</div>
+		<div class="ouvrir-informations">
+			<div class="circle">
+					<div class="texte2">
+						?
+					</div>
+			</div>
+		</div>
+	</div>
+	
+				<div class="row" id= "for-badges">
+					<div class="span3">
 						<%= render "shared/menu_cat"%>
 					</div>
 	
-					<div class="span8" id="for-badges">
+					<div class="span8" id="list">
 						<%= render "shared/index", :object => @doulins %>
 					</div>
 				</div>
