--- a/app/views/static_pages/list_challenges.html.erb
+++ b/app/views/static_pages/list_challenges.html.erb
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	
-	<div class="row" id="open-infos">
+	<div class="row" id="open-infos2">
 		<div class="span11" id="informations-doulin">
 			<div class="span3" id="informations-doulin1">
 				<div class="texte">
@@ -41,7 +41,7 @@
 			</div>
 			<div class="span4" id="informations-doulin3">
 			</div>
-			<div class="span1" id="fermer-explication">
+			<div class="span1" id="fermer-explication1">
 				X
 			</div>
 		</div>
