--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -195,6 +195,45 @@ input.ajust-input, textarea.ajust-input {
 	}
 		.follow{
 		margin-left:-20px;
+		height:  24px;
+		width: 90px;
+		background-color: #808080;
+		
+		.texte{
+			font-family: "gotham";
+			font-weight: bold;
+			font-size: 16px;
+			color: #FFF;
+			padding-left: 8px;
+			padding-top:2px;
+			
+			.texte:hover{
+				color: black;
+			}
+		}
+		
+		.texte2{
+			font-family: "gotham";
+			font-weight: bold;
+			font-size: 16px;
+			color: #FFF;
+			padding-left: 12px;
+			padding-top:2px;
+			
+			.texte:hover{
+				color: black;
+			}
+		}
+		
+		.arrow-left{
+			margin-top:-20px;
+			padding-left: 78px;
+		 	width: 0; 
+		 	height: 0; 
+		 	border-top: 12px solid transparent;
+		 	border-bottom: 12px solid transparent; 
+		 	border-right:12px solid white;
+		}
 		
 		}
 	
@@ -252,8 +291,49 @@ input.ajust-input, textarea.ajust-input {
 
 		}
 	}
+		
 		.follow{
 		margin-left:-20px;
+		height:  24px;
+		width: 90px;
+		background-color: #808080;
+		
+		.texte{
+			font-family: "gotham";
+			font-weight: bold;
+			font-size: 16px;
+			color: #FFF;
+			padding-left: 8px;
+			padding-top:2px;
+			
+			.texte:hover{
+				color: black;
+			}
+		}
+		
+		
+		.texte2{
+			font-family: "gotham";
+			font-weight: bold;
+			font-size: 16px;
+			color: #FFF;
+			padding-left: 12px;
+			padding-top:2px;
+			
+			.texte:hover{
+				color: black;
+			}
+		}
+		.arrow-left{
+			margin-top:-20px;
+			padding-left: 78px;
+		 	width: 0; 
+		 	height: 0; 
+		 	border-top: 12px solid transparent;
+		 	border-bottom: 12px solid transparent; 
+		 	border-right:12px solid white;
+		}
+		
 		}
 	
 		.categorie{
@@ -351,6 +431,45 @@ input.ajust-input, textarea.ajust-input {
 	
 	.follow{
 	margin-left:-20px;
+	height:  24px;
+	width: 90px;
+	background-color: #808080;
+	
+	.texte{
+		font-family: "gotham";
+		font-weight: bold;
+		font-size: 16px;
+		color: #FFF;
+		padding-left: 8px;
+		padding-top:2px;
+		
+		.texte:hover{
+			color: black;
+		}
+	}
+	
+	.texte2{
+		font-family: "gotham";
+		font-weight: bold;
+		font-size: 16px;
+		color: #FFF;
+		padding-left: 12px;
+		padding-top:2px;
+		
+		.texte:hover{
+			color: black;
+		}
+	}
+	.arrow-left{
+		margin-top:-20px;
+		padding-left: 78px;
+	 	width: 0; 
+	 	height: 0; 
+	 	border-top: 12px solid transparent;
+	 	border-bottom: 12px solid transparent; 
+	 	border-right:12px solid white;
+	}
+	
 	}
 	
 	.categorie{
