--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -290,7 +290,7 @@ text-align: center;
 #index-doulins{
 	#informations-doulin{
 		width: 950px;
-		margin: 30px 0px 0px 50px;
+		margin: 30px 0px 0px 70px;
 		background-color: #C9C9C9;
 		height: 270px;
 		
@@ -336,6 +336,15 @@ text-align: center;
 		}
 		
 		#fermer-explication{
+		font-family: "gotham";
+		font-size: 16px;
+		margin-top: 5px;
+		margin-left: 8px;
+		width:5px;
+		cursor: pointer;
+		}
+		
+		#fermer-explication1{
 		font-family: "gotham";
 		font-size: 16px;
 		margin-top: 5px;
