--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -67,7 +67,17 @@
 					
 	 			</div>
 	 		</div>
-	 	</div>				
+	 	</div>
+	   
+		<div class="span1" id="follow">
+	   		<% if current_user && current_user.following?(@debate)%>
+	   			<div class="texte2"><%= link_to"Fuir", unfollow_debate_path(@debate), class: "texte"%></div>
+	   		<% else %>
+	   			<div class="texte"><%= link_to"Suivre", follow_debate_path(@debate), class: "texte"%></div>
+	   		<% end %>
+	   			<div class="arrow-left"></div>
+	   </div>
+	
 	   	<div class="span1" id="catcat">
 			<div class="arrow-left"></div>   		
 	   		<div class="image">
