--- a/app/views/shared/_challenge_badge.html.erb
+++ b/app/views/shared/_challenge_badge.html.erb
@@ -22,10 +22,11 @@
 			<div class="span2">
 				<div class="follow">
 				<% if current_user && current_user.following?(challenge)%>
-					<%= link_to"Ne plus suivre", unfollow_challenge_path(challenge)%>
+					<div class="texte2"><%= link_to"Fuir", unfollow_challenge_path(challenge), class: "texte"%></div>
 				<% else %>
-					<%= link_to"suivre", follow_challenge_path(challenge)%>
+					<div class="texte"><%= link_to"Suivre", follow_challenge_path(challenge), class: "texte"%></div>
 				<% end %>
+					<div class="arrow-left"></div>
 				</div>
 				<div class="categorie">
 					<div class="arrow-left"></div>
