--- a/app/views/shared/_doulin_badge.html.erb
+++ b/app/views/shared/_doulin_badge.html.erb
@@ -23,10 +23,11 @@
 		<div class="span1">
 			<div class="follow">
 			<% if current_user && current_user.following?(doulin)%>
-				<%= link_to"Ne plus suivre", unfollow_doulin_path(doulin)%>
+				<div class="texte2"><%= link_to"Fuir", unfollow_doulin_path(doulin), class: "texte"%></div>
 			<% else %>
-				<%= link_to"suivre", follow_doulin_path(doulin)%>
+				<div class="texte"><%= link_to"Suivre", follow_doulin_path(doulin), class: "texte"%></div>
 			<% end %>
+				<div class="arrow-left"></div>
 			</div>
 	
 			<div class="categorie">
